test/e2e/scenario/policy-report/00-create.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: echo
  labels:
    app.kubernetes.io/name: echo
spec:
  containers:
    - name: app
      # Using image digest to avoid fragile tests
      image: >-
        docker.io/nginxinc/nginx-unprivileged@sha256:1645798310a56491acb75d750ed6a4693a35506c9860503d21a877cc54d95191
      ports:
        - name: app
          containerPort: 8080
          protocol: TCP
