test/e2e/scenario/policy-report/01-assert.yaml
---
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  name: pod-echo-app-ab50d
  ownerReferences:
    - apiVersion: stas.statnett.no/v1alpha1
      blockOwnerDeletion: true
      controller: true
      kind: ContainerImageScan
      name: pod-echo-app-ab50d
scope:
  kind: Pod
  name: echo
