test/e2e/scenario/policy-report/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: scan-pod
spec:
  steps:
    - name: step-00
      try:
        - apply:
            file: 00-create.yaml
        - assert:
            file: 00-assert.yaml
    - name: step-01
      try:
        - assert:
            file: 01-assert.yaml
